tests/miniJava/neg/003519_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if if 0 ) { } else { } } }
